objects/FullObject2__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>maruthiSF1__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullObject2_id__c</fullName>
        <label>FullObject2_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullObject2_name__c</fullName>
        <label>FullObject2_name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>FullObject2</label>
    <nameField>
        <label>FullObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FullObjects2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>